added google analytics

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- Google Tag Manager -->
-  <!-- TODO: Remove or replace GTM-PGZH8HT with your own Google Tag Manager ID -->
-  <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-PGZH8HT');</script> -->
+  })(window,document,'script','dataLayer','GTM-T3G22252');</script>
   <!-- End Google Tag Manager -->
 
   <!-- Materialize - Compiled and minified CSS-->
@@ -23,16 +22,15 @@
   <link rel="stylesheet" href="/assets/css/style.css" />
   <title>Theodore Rex Orth | Mechanical Engineer</title>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- TODO: Remove or replace UA-126939217-2 with your own Google Analytics tracking ID -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WTMJLLBMEY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'UA-126939217-2');
-  </script> -->
+  gtag('config', 'G-WTMJLLBMEY');
+</script>
 
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
@@ -73,11 +71,10 @@
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <!-- TODO: Remove or update if using Google Tag Manager -->
-  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGZH8HT"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe>
-  </noscript> -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T3G22252"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   
   <!-- Navigation Menu-->
   <!-- Nav class 1 -->
