updated experience section

--- a/index.html
+++ b/index.html
@@ -65,9 +65,6 @@
   <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
-  <!-- Google Site Verification for indexing -->
-  <!-- TODO: Remove or replace with your own Google Site Verification code -->
-  <!-- <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" /> -->
 </head>
 
 <body>
@@ -143,7 +140,6 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- TODO: Update resume link with your resume URL -->
         <a aria-label="Open resume in a new tab" href="https://rexorth.github.io/assets/resume/Orth_Rex_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
@@ -190,7 +186,6 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <!-- TODO: Update resume link with your resume URL -->
         <a aria-label="Open Rex's Resume in a new tab"
           href="https://rexorth.github.io/assets/resume/Orth_Rex_Resume.pdf" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
@@ -223,20 +218,6 @@
                   <i class="fa fa-github"></i>
                 </button>
               </a>
-
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
-                <button class="icon-btn angellist">
-                  <i class="fa fa-angellist"></i>
-                </button>
-              </a> -->
-
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-
-                  </span>
-              </a> -->
             </div>
             <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
@@ -280,59 +261,65 @@
     <section id="experience" class="section scrollspy">
       <h3 class="page-title white-text teal">Experience</h3>
       <div class="container">
-        <!-- TODO: Update with your actual work experience -->
-        
-        <!-- Experience Entry 1 - Replace with your actual experience -->
+        <!-- Experience Entry 1 -->
         <div class="card">
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="#" target="_blank"><img alt="Company logo"
-                    src="https://via.placeholder.com/200x200/00796b/ffffff?text=Company+Logo" class="responsive-img center-block" /></a>
+                <a href="https://www.meta.com" target="_blank"><img alt="Meta logo"
+                    src="/assets/img/meta-logo-1.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#" target="_blank"
-                      class="teal-text hoverline">Company Name</a></span>
+                  <span class="card-title"><a href="https://www.meta.com" target="_blank"
+                      class="teal-text hoverline">Meta</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Job Title</div>
+            <div class="role brown-text text-darken-2">Mechanical Engineer</div>
+            <p>Led mechanical prototyping for novel haptics and sensing research. Worked independently or in small teams to design, fabricate, and demonstrate functional prototypes for internal demos and published research.</p>
             <ul>
-              <li>Description of your responsibilities and achievements</li>
-              <li>Another accomplishment or project</li>
-              <li><b>Tools:</b> Solidworks, MATLAB, Python, etc.</li>
+              <li>Designed and built devices including soft force sensors, piezoelectric actuators, and an EMG-integrated wristband with electrostatic feedback</li>
+              <li>Created custom tools and molds using DFMA and GD&T principles to optimize for small-batch manufacturability, ease of assembly, and low-cost production; increased actuator throughput by 10×</li>
+              <li>Conducted mechanical testing and analysis (tensile, FEA, thermal) to validate designs and material performance</li>
+              <li>Collaborated with researchers and interns to integrate optics, sensing, and electronics</li>
+              <li>Co-authored a peer-reviewed paper in Advanced Functional Materials on electro-elastic wetting for droplet control</li>
+              <li><b>Tools:</b> SolidWorks, FEA, System Analysis, Python, MATLAB, GD&T, DFMA</li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Start Date - End Date | Location</span>
+            <span>Apr 2021 – Apr 2023 | Redmond, WA</span>
           </div>
         </div>
 
-        <!-- Experience Entry 2 - Replace with your actual experience -->
+        <!-- Experience Entry 2 -->
         <div class="card">
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="#" target="_blank"><img alt="Company logo"
-                    src="https://via.placeholder.com/200x200/00796b/ffffff?text=Company+Logo" class="responsive-img center-block" /></a>
+                <a href="#" target="_blank"><img alt="Robodub Drones logo"
+                    src="/assets/img/robodub-1.jfif" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="#" target="_blank"
-                      class="teal-text hoverline">Company Name</a></span>
+                      class="teal-text hoverline">Robodub Drones</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Job Title</div>
+            <div class="role brown-text text-darken-2">Mechanical Engineer</div>
+            <p>Primary mechanical designer at a startup developing reconfigurable drones for improved stability and efficiency. Supported rapid prototyping cycles and coordinated hands-on integration with technicians.</p>
             <ul>
-              <li>Description of your responsibilities and achievements</li>
-              <li>Another accomplishment or project</li>
-              <li><b>Tools:</b> Solidworks, MATLAB, Python, etc.</li>
+              <li>Designed and improved structural components in response to flight test failures and performance needs</li>
+              <li>Collaborated with technicians to test, repair, and iterate drone hardware across multiple platforms</li>
+              <li>Reduced arm carriage weight by 20% via FEA while maintaining structural integrity</li>
+              <li>Repackaged the drone to support tethered high-voltage power, with thermal FEA guiding ventilation and fan design</li>
+              <li>Integrated PCB, power, and cooling systems to replace battery-based architecture and improve reliability</li>
+              <li><b>Tools:</b> SolidWorks, FEA (ANSYS), Thermal Analysis, CNC Machining, CAM, 3D Printing</li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Start Date - End Date | Location</span>
+            <span>Jun 2019 – Jan 2021 | Seattle, WA</span>
           </div>
         </div>
 
