updated education and README

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.meta.com" target="_blank"><img alt="Meta logo"
-                    src="/assets/img/meta-logo-1.png" class="responsive-img center-block" /></a>
+                    src="/assets/img/meta-logo.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
@@ -581,38 +581,28 @@
       <h3 class="page-title white-text teal">Education</h3>
       <div class="container">
         <div class="row">
-          <!-- TODO: Update Education section with your academic history -->
-          <!-- Example education entry structure:
           <div class="col s12 m6 l6">
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="UNIVERSITY_URL" target="_blank" class="teal-text hoverline">University Name</a></span>
+                  <span class="card-title"><a href="https://www.washington.edu" target="_blank" class="teal-text hoverline">University of Washington</a></span>
                 </p>
-                <p class="brown-text">Location</p>
+                <p class="brown-text">Seattle, WA</p>
                 <p>
-                  <b>Degree: </b>Bachelor/Master of Science in Mechanical Engineering      
+                  <b>Degree: </b>Bachelor of Science in Mechanical Engineering
                   <br>
-                  <b>GPA: </b>X.XX/4.0
-                </p>
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
+                  <b>CGPA: </b>3.5/4.0
+                  <br>
+                  <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Mechanical Design</li>
+                    <li>Controls</li>
+                    <li>Embedded Systems</li>
+                    <li>Machine Design</li>
                     <li>Thermodynamics</li>
-                    <li>Fluid Mechanics</li>
-                    <li>Manufacturing Processes</li>
-                    <li>Mechatronics</li>
                   </ul>
-                  </p>
-                </ul>
+                </p>
               </div>
             </div>
-          </div>
-          -->
-          <div class="col s12">
-            <p class="flow-text center-align">Education section coming soon. Please update with your academic history.</p>
           </div>
         </div>
       </div>
