fixed meta logo

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.meta.com" target="_blank"><img alt="Meta logo"
-                    src="/assets/img/meta-logo.png" class="responsive-img center-block" /></a>
+                    src="/assets/img/meta-logo-1.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
